<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_mediafile_category">

        <CheckBoxPreference
            android:title="@string/settings_include_music"
            android:summary="@string/settings_include_music_sub"
            android:key="@string/key_include_music"/>

        <CheckBoxPreference
            android:title="@string/settings_include_podcast"
            android:summary="@string/settings_include_music_sub"
            android:key="@string/key_include_podcast"/>
        
        <CheckBoxPreference
            android:title="@string/settings_include_notification"
            android:summary="@string/settings_include_notification_sub"
            android:key="@string/settings_include_notification"/>

        <CheckBoxPreference
            android:title="@string/settings_include_alarm"
            android:summary="@string/settings_include_alarm_sub"
            android:key="@string/settings_include_alarm"/>

        <CheckBoxPreference
            android:title="@string/settings_include_ringtone"
            android:summary="@string/settings_include_ringtone_sub"
            android:key="@string/settings_include_ringtone"/>

        <CheckBoxPreference
            android:title="@string/settings_include_other"
            android:summary="@string/settings_include_other_sub"
            android:key="@string/settings_include_other"/>

    </PreferenceCategory>

</PreferenceScreen>