<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuShuffle"
        android:title="@string/random_playlist"
        android:icon="?ic_shuffle_actionbar"
        android:orderInCategory="25"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuRepeat"
        android:title="@string/repeat_playlist"
        android:icon="?ic_repeat_actionbar"
        android:orderInCategory="50"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuRefreshList"
        android:title="@string/refresh_songlist"
        android:icon="?attr/ic_refresh_actionbar"
        android:orderInCategory="70"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuExit"
        android:title="@string/exit"
        android:icon="?attr/ic_exit_actionbar"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>