<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuRefreshList"
        android:title="@string/refresh_songlist"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="40"/>

    <item
        android:id="@+id/menuStream"
        android:title="@string/stream"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="70"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="75"/>

    <item
        android:id="@+id/menuExit"
        android:title="@string/exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"/>

    <!--<item
        android:id="@+id/menuSearch"
        android:title="@string/search_song"
        android:icon="@android:drawable/ic_menu_search"/>-->

</menu>