<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/menuPlaylist"
        android:title="@string/playlist"
        android:orderInCategory="25"
        app:showAsAction="never"/>-->

    <item
        android:icon="?ic_info_actionbar"
        android:id="@+id/menuInfo"
        android:title="@string/song_info"
        android:orderInCategory="75"
        app:showAsAction="never"/>

    <item
        android:icon="?ic_exit_actionbar"
        android:id="@+id/menuStop"
        android:title="@string/stop_play_service"
        android:orderInCategory="90"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuLogs"
        android:title="@string/logs"/>

</menu>