<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?actionBarSize"
    android:background="?colorPrimary"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?toolbarBackgroundColor"/>

    <include
        layout="@layout/search_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="?toolbarBackgroundColor">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/songsTabs"
            app:tabIndicatorColor="?titleTextColor"
            app:tabTextAppearance="@style/Theme.Style.TabLayout.TabTextAppearance"
            app:tabSelectedTextColor="?titleTextColor"
            app:tabMode="scrollable"
            app:tabGravity="center">

            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_songs"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_albums"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_artists"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/tab_years"/>

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

</com.google.android.material.appbar.AppBarLayout>