<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/theme_spinner"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/preview_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/theme_apply"
        android:text="@string/theme_apply"
        app:layout_constraintTop_toBottomOf="@id/theme_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Theme.Button.Colored"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preview_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_medium_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_small_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/title"
                style="?android:attr/textAppearanceMedium"
                android:textColor="?colorAccent"
                android:text="@string/theme_current"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/preview_color_primary"
                android:gravity="center"
                android:layout_margin="@dimen/default_small_margin"
                app:layout_constraintTop_toBottomOf="@android:id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/preview_color_primary_dark">

                <View
                    android:layout_width="@dimen/color_preview_dimen"
                    android:layout_height="@dimen/color_preview_dimen"
                    android:background="?colorPrimary"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_primary"
                    android:gravity="center_horizontal"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/preview_color_primary_dark"
                android:gravity="center"
                android:layout_margin="@dimen/default_small_margin"
                app:layout_constraintTop_toBottomOf="@android:id/title"
                app:layout_constraintStart_toEndOf="@id/preview_color_primary"
                app:layout_constraintEnd_toStartOf="@id/preview_color_accent">

                <View
                    android:layout_width="@dimen/color_preview_dimen"
                    android:layout_height="@dimen/color_preview_dimen"
                    android:background="?colorPrimaryDark"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_primary_dark"
                    android:gravity="center_horizontal"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/preview_color_accent"
                android:gravity="center"
                android:layout_margin="@dimen/default_small_margin"
                app:layout_constraintTop_toBottomOf="@android:id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/preview_color_primary_dark">

                <View
                    android:layout_width="@dimen/color_preview_dimen"
                    android:layout_height="@dimen/color_preview_dimen"
                    android:background="?colorAccent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_accent"
                    android:gravity="center_horizontal"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="italic"
        android:text="@string/theme_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>